Bug 144907 - sw ui: can't close "Fields" dialog
Summary: sw ui: can't close "Fields" dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.3.3 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-04 08:57 UTC by Vasily Melenchuk (CIB)
Modified: 2021-10-07 06:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2021-10-04 08:57:47 UTC
Description:
In some circumstances "Fields" dialog window can't be closed by any means.

Steps to Reproduce:
1. Create new Writer document
2. Open "Insert"->"Field"->"More Fields..." dialog (or Ctrl+F2)
3. Insert "Input field" (from "Functions" tab) with any text & reference
4. Repeat step 3.
5. WITHOUT CLOSING "Fields" dialog (this is important) just click text and put cursor in between of inserted fields (mouse or keyboard, does not matter).
6. Now try to close "Fields" dialog window.

Actual Results:
Dialog window won't close on "Close" button at bottom, system close button, ESC key or anything else.

Expected Results:
Dialog should be closed.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version 4.2.3.3 is definitely affected, 3.3.0 works fine. Other versions in between were not checked.
Comment 1 Commit Notification 2021-10-06 10:08:39 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da5580369bfd15857fb21a1f610e393d07abb805

tdf#144907: sw ui: allow closing of "Fields" dialog

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2021-10-07 06:35:00 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/fc9383e943bdb07e1770af4eef8ffe8859c379f8

tdf#144907: sw ui: allow closing of "Fields" dialog

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.