tdf#144907: sw ui: allow closing of "Fields" dialog

In some cases (described in task) dialog is not closed.
This is happens due to not delivered request to
SwTextShell::ExecField(). So we could just close dialog
explicitly, if Execute() action did fail.

Change-Id: I1c712295a21037bc8bb28e2a97e750299b41250c